# Codes

./: .gitignore  README.md
ASIS_MC_Cmake/: CMakeLists.txt  README.md
ASIS_MC_Cmake/data/: example.csv
ASIS_MC_Cmake/include/: asa241.hpp  stratifiedMCClass.hpp
ASIS_MC_Cmake/src/: asianOptionNew.cpp
AdaptiveStratification_ImportanceSampling/: README.md
AdaptiveStratification_ImportanceSampling/codes_build/: .Makefile.swp  .ycm_extra_conf.py  Makefile  a.out  asianOption.cpp  asianOptionB.cpp  asianOptionNew.cpp  gradientDescent.cpp  gradientDescent.hpp  importanceSamplingAndVectorTools.cpp  importanceSamplingAndVectorTools.hpp  simpleNormal.cpp  stratifiedMCClass.cpp  stratifiedMCTemplates.cpp  stratifiedMCTemplates.hpp
RQMC/: .gitignore  CMakeLists.txt  README.md
RQMC/data/: Call_16_45.000000.csv  Call_16_45.csv  Call_16_50.000000.csv  Call_16_50.csv  Call_16_55.000000.csv  Call_16_55.csv  Call_45.csv  Call_64_45.000000.csv  Call_64_45.csv  Call_64_50.000000.csv  Call_64_50.csv  Call_64_55.000000.csv  Call_64_55.csv  RQMC.csv  put_16_45.csv  put_16_50.csv  put_16_55.csv  put_64_45.csv  put_64_50.csv  put_64_55.csv  test_data.ipynb
RQMC/include/: Normal_distribution_LD.hpp  low_discrepancy.hpp
RQMC/src/: README.md  Randomized_MC.cpp  basket_arma.cpp  low_discrepancy.cpp  main.cpp
RQMC/src/data/: test_data.ipynb
RQMC/src/data/.ipynb_checkpoints/: test_data-checkpoint.ipynb
RQMC/src/include/: Randomized_MC.hpp
